--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "SceneLang_Highlighter",
     "description": "Highlighter for the SceneLang Demain-Specific language from the Julia package Raytracer.jl",
     "version": "0.1.0",
+    "publisher": "samuele-colombo",
     "engines": {
         "vscode": "^1.57.0"
     },
